[package]
name = "upyun_upload"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.10", features = ["json", "cookies", "gzip", "tokio-native-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "*"
dotenv = "*"